@@ -3,13 +3,14 @@ package com.floreysoft.jmte.renderer;
 import java.util.Iterator;
 
 import com.floreysoft.jmte.Renderer;
+import com.floreysoft.jmte.TemplateContext;
 
 
 @SuppressWarnings("unchecked")
 public class DefaultIterableRenderer implements Renderer<Iterable> {
 
 	@Override
-	public String render(Iterable iterable) {
+	public String render(TemplateContext context, Iterable iterable) {
 		final String renderedResult;
 
 		final Iterator<?> iterator = iterable.iterator();
