@@ -3,13 +3,14 @@ package com.floreysoft.jmte.renderer;
 import java.util.Map;
 
 import com.floreysoft.jmte.Renderer;
+import com.floreysoft.jmte.TemplateContext;
 
 
 @SuppressWarnings("unchecked")
 public class DefaultMapRenderer implements Renderer<Map> {
 
 	@Override
-	public String render(Map map) {
+	public String render(TemplateContext context, Map map) {
 		final String renderedResult;
 
 		if (map.size() == 0) {
