@@ -1,18 +1,18 @@
 package com.floreysoft.jmte.realLive;
 
 import java.text.DateFormat;
-import java.text.SimpleDateFormat;
 import java.util.Date;
 import java.util.Locale;
 
 import com.floreysoft.jmte.Renderer;
+import com.floreysoft.jmte.TemplateContext;
 
 public class DateRenderer implements Renderer<Date>{
+	DateFormat dateFormat = DateFormat.getDateInstance(DateFormat.SHORT, Locale.GERMAN);
+//		DateFormat dateFormat = new SimpleDateFormat("EEE, d MMM, ''yy", Locale.GERMAN);
 
 	@Override
-	public String render(Date date) {
-		DateFormat dateFormat = DateFormat.getDateInstance(DateFormat.SHORT, Locale.GERMAN);
-//		DateFormat dateFormat = new SimpleDateFormat("EEE, d MMM, ''yy", Locale.GERMAN);
+	public String render(TemplateContext context, Date date) {
 		String rendered = dateFormat.format(date);
 		return rendered;
 	}
