@@ -8,7 +8,6 @@ Gaußstraße 180
 22765 Hamburg
 GERMANY
 
-
 1x How to become famous à 17,80 € = 17,80 €
 2x Cool stuff à 1,00 € = 2,00 €
 plus shipping = 3,00 €
